web_app/journeyplanner/static/journeyplanner/main.css
/* ... */
  /* edit journey button */
  .edit-journey {
    margin-top: 2px;
    margin-left: 30px;
    height: 30px;
    width: 100px;
  }

  /* remove margin on labels of summary results */
  .results-label {
    margin-left: 0px;
  }

  .results-dt-mob {
    padding-left: 0px;
    margin-left: -2px;
  }

/*the container must be positioned relative:*/
.autocomplete {
  position: relative;
  display: inline-block;
  margin-bottom: 5px;
}

input {
  border: 1px solid transparent;
  background-color: #f1f1f1;
  padding: 10px;
  font-size: 16px;
}

input[type=text] {
  background-color: #f1f1f1;
  width: 100%;
}

input[type=submit] {
  background-color: DodgerBlue;
  color: #fff;
  cursor: pointer;
}

.autocomplete-items {
  position: absolute;
  border: 1px solid #d4d4d4;
  border-bottom: none;
  border-top: none;
  z-index: 99;
  /*position the autocomplete items to be the same width as the container:*/
  top: 100%;
  left: 0;
  right: 0;
}

.autocomplete-items div {
  padding: 10px;
  cursor: pointer;
  background-color: #fff; 
  border-bottom: 1px solid #d4d4d4; 
}

/*when hovering an item:*/
.autocomplete-items div:hover {
  background-color: #e9e9e9; 
}

/*when navigating through the items using the arrow keys:*/
.autocomplete-active {
  background-color: DodgerBlue !important; 
  color: #ffffff; 
}

ul {
  list-style-type: none;
  padding-left: 15px;
  padding-top: 10px;
  font-size: 1em;
}

#checkboxes {
  margin-left: 20px;
  font-size: 1.1em;
  margin-top: 5px;
}

.geo-error {
  display:none;
}

/* question mark for geolocation info */
.question {
  color: #4484CE;
  height: fit-content !important;
  padding: 0px 20px 5px 5px !important;
}

/* instructions to user on map interface */
.instruction {
  font-size: 0.9em;
  margin-left: 10px;
  /* padding-top: 10px; */
}

#instruction-planner {
  padding-top: 10px;
}

/* all form input boxes for all tabs */
.input-box {
  max-width: 400px;
  min-width: 400px;
  margin-bottom: 10px;
  margin-left: 5px;
}

h5 {
  margin: 10px 10px 10px 10px;
  text-align: center;
}

.form-group {
  font-size: 1.1em;
}

/* give all form labels a margin */
label {
  margin-left: 15px;
}

label.dt-label {
  margin-left: 11px;
}

/* tourist map checkboxes */
#checkbox-card {
  margin: 15px 15px 15px 15px;
  padding-bottom: 10px;
}

#origin-tourist {
  padding-bottom: 5px !important;
}

/* 'use my location' button */
.geolocation-option {
  height: fit-content !important;
  padding: 0px !important;
  padding-left: 20px !important;
  text-align: left;
  min-width: 150px;

}

.spinner-border {
  margin-left: 10px;
  display: none;
}

.mobile-space{
  display:none;
}

/* to align spinners beside checkboxes */
.flex {
  display: flex;
  flex-direction: row;
}

#destination-tourist-summary {
  height: fit-content;
}

.summary-results {
  min-height: 30px;
}

.geo-spinner {
  display: none;
  margin-left: 0px;
  margin-top: 5px;
}

.summary-results-dt {
  height: 30px;
  margin-bottom: 10px;
}

/* title of each tab on desktop screens */
.tab-title {
  font-size: 1.7em;
  text-align: center;
  background-color: #4484CE;
  height: 66px;
  padding-bottom: 14px;
  padding-top: 17px;
  font-weight: 400;
  text-align: middle;
  color: white;
}

#results-chart {
  width: 420px;
  margin-top: 20px;
}

.chart {
  width: 80vw;
  margin-left: 0px;
  max-width: 375px;
}

#tourist-destination-error {
  display: none;
  color: red;
  margin-left: 5px;
}

.invalid-location-error{
  display: none;
  /* color: red;
  margin-left: 5px; */
}

.alert-danger {
  width: 95%;
}

#stop-to-stop-incomplete-form-error {
  display: none;
}

/* leap card */
#leap-login-container {
  margin-top: 10px;
}

.leap-result {
  display: none;
}

#leap-login-button {
  margin-top: 10px;
  margin-left: 5px;
}

#leap-account-needed{
  margin-left: 5px;
}

/*realtime info */
#real-time {
  margin-top: 10px;
}

#realtime-input {
  width: 420px;
}

#realtime-error {
  display: none;
  margin-left: 25px;
}

#routeplanner-form {
  margin-top: 10px;
}

.fare-header {
  text-align: left;
  font-weight: 600;
}

#leap-logout {
  display: none;
  margin-left: 30px;
}

/* fare */

.fare-button {
  text-align: left;
  margin-left: 0px;
}

#accordion-fare-tourist {
  display: none;
}

#accordion-fare {
  display:none;
}

#accordion-fare-tab2 {
  display:none;
  
}

.fare-accordion {
  margin-left: 15px;
}

.tab-card {
  width: 90vw;
  max-width: 400px;
}

/* .fare-accordion {
  margin: 15px 15px 15px 15px;
  background-color: white;
} */


.fare-result-detailed{
  padding-left: 0px;
  margin-bottom: 10px;
  padding-bottom: 0px;
}

.fare-total-message {
  display: none;
  font-size: 0.9em;
  color: red;
}

.upper-fare-content {
  margin-left: 0px;
  padding-left: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
}

.card-body {
  padding-bottom: 0px;
}

.card-header {
  background-color: white;
}
/* ... */

